--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <activity
             android:name=".presentation.GameDetailActivity"
-            android:label="@string/title_activity_game_detail"
+            android:label=""
             android:parentActivityName=".presentation.MainActivity"
             android:theme="@style/AppTheme">
             <meta-data
