--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
 
     implementation 'com.jakewharton.timber:timber:4.6.1'
