--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
