--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.zebannikolay.capstone.presentation.MainActivity" />
         </activity>
+        <receiver android:name=".presentation.BoardGameWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/board_game_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
